# BeamMP-Manager

./: .env.example  .gitignore  LICENSE  README.md  beammp_manager.spec  main.py  models.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  ruff.yml
src/: main.py  models.py  run.py
static/css/: dashboard.css  guest_dashboard.css  login.css
static/js/: dashboard.js  guest_dashboard.js  login.js
templates/: dashboard.html  guest_dashboard.html  login.html
