[project]
name = "beammp-manager"
version = "1.0.0"
requires-python = ">=3.12.0"
dependencies = [
    "aiofiles==25.1.0",
    "discord-oauth2-py==1.2.2",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "quart==0.20.0",
    "quart-auth==0.11.0",
    "vt-py==0.22.0",
]

[tool.ruff.lint]
extend-select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "C4",
    "ISC",
    "ICN",
    "RET",
    "SIM",
    "TID",
    "PYI"
]
ignore = [
    "E501",
    "SIM117"
]
