[project]
name = "beammp-manager"
license = "MIT"
version = "0.2.1"
requires-python = ">=3.12.0"
dependencies = [
    "aiofiles==25.1.0",
    "aiohttp[speedups]==3.13.5",
    "discord-oauth2-py==1.2.2",
    "pydantic==2.13.3",
    "python-dotenv==1.2.2",
    "quart==0.20.0",
    "quart-auth==0.11.0",
    "tomlkit==0.14.0",
    "vt-py==0.22.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyinstaller>=6.20.0",
]

[tool.ruff.lint]
extend-select = [
    "B",
    "C4",
    "E",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "PTH",
    "PYI",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SIM",
    "TID",
    "UP",
    "W"
]
ignore = [
    "E501"
]
